# Matrix

./: .gitignore  README.md  pyproject.toml  setup.sh
exercises/ex00/: main.py
exercises/ex01/: main.py
exercises/ex02/: main.py
exercises/ex03/: main.py
exercises/ex04/: main.py
exercises/ex05/: main.py
exercises/ex06/: main.py
exercises/ex07/: main.py
exercises/ex08/: main.py
exercises/ex09/: main.py
exercises/ex10/: main.py
exercises/ex11/: main.py
exercises/ex12/: main.py
exercises/ex13/: main.py
linear_algebra/: __init__.py  matrix.py  vector.py
utils/: __init__.py  plotter.py
