[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "Matrix"
version = "0.1.0"
authors = [
    {name = "Adel LAKHDAR", email = "alakhdar@student.42lyon.fr"},
]
description = "An introduction to Linear Algebra"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.57.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "packaging==25.0",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
]

[project.optional-dependencies]
dev = [
]

[tool.setuptools.packages.find]
where = ["."]
include = ["linear_algebra", "utils"]